# autopackager

./: Cargo.toml  README.md  config.yaml  test_src.txt
.github/workflows/: ci.yml  release.yml  rust.yml
ci/: build-deb  cargo-out-dir  sha256-releases  utils.sh
src/: main.rs  packager_command.rs
src/tests/data/: config.yaml  config.yml  test_src.txt
src/tests/ori_data/: config.yaml
tests/data/: config.yml
tests/ori_data/: config.yml
