[package]
name = "autopackager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
glob = "0.3"
regex = "1.7"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
itertools = "0.11"
ignore = "0.4"
clap = { version = "4.3", features = ["derive"] }
libc = "0.2"
ansi_term = "0.12"
shell-words = "1.1"